workloads/medium-place/photoprism/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: photoprism
  namespace: medium-place
  labels:
    app.kubernetes.io/name: photoprism
    app.kubernetes.io/part-of: photoprism
    app.kubernetes.io/version: "220901"

spec:
  selector:
    app.kubernetes.io/name: photoprism
    app.kubernetes.io/part-of: photoprism

  ports:
    - name: http
      protocol: TCP
      port: 2342
      targetPort: http
